# id-autoencoder-anomaly-training

./: .gitignore  README.md  columns_info.json  config.example.json  hello.py  hello.txt  jobspec.example.json  pyproject.toml  run.py  run.sh  setup.py  submit_job.py  training_log.csv
.ipynb_checkpoints/: config-checkpoint.json  jobspec-checkpoint.json  run-checkpoint.sh  training_log-checkpoint.csv
autoencoder_anomaly_detection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
model/: autoencoder_emoney_20260306.keras  columns_info.json  hyperparameters.json  precomputed.json
model/.ipynb_checkpoints/: columns_info-checkpoint.json  hyperparameters-checkpoint.json  precomputed-checkpoint.json
train_data/: part-000000000000.parquet  part-000000000001.parquet  part-000000000002.parquet  part-000000000003.parquet  part-000000000004.parquet  part-000000000005.parquet
trainer/: args_validator.py  config.py  task.py
trainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
trainer/.ipynb_checkpoints/: task-checkpoint.py
trainer/utils/: data_loader.py  persistence.py  report_generator.py  train.py
trainer/utils/.ipynb_checkpoints/: data_loader-checkpoint.py  report_generator-checkpoint.py  train-checkpoint.py
val_data/: part-000000000049.parquet
