[project]
name = "autoencoder-anomaly-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.0"
dependencies = [
    'google-cloud-bigquery>=3.20.0', # Forces an upgrade to a fixed version
    'google-api-core>=2.17.0',
    "google-cloud-storage",
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "tensorflow",
    "tdigest",
    "fastparquet",
    "seaborn"
]